<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_email"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_email"/>
    <item
        android:id="@+id/menu_text_format"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_text_format"/>
    <item
        android:id="@+id/menu_add_page"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_add_page"/>
    <item
        android:id="@+id/menu_delete_page"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/menu_delete_page"/>
    <item
        android:id="@+id/menu_save"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_save_as"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_save_as"/>
    <item
        android:id="@+id/menu_load"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/menu_load"/>
    <item
        android:id="@+id/menu_new_project"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/menu_new_project"/>

</menu>