<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/start_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btn_new_project"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/new_project_btn" />

    <Button
        android:id="@+id/btn_load_project"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/load_project_btn" />

</LinearLayout>
